main.tf
provider "aws" {
  shared_credentials_files = ["$HOME/.aws/credentials"]
  profile                 = "terraform-example"
  region                  = "ap-northeast-1"
}

resource "aws_instance" "example" {
    ami = "ami-0c3fd0f5d33134a76"
    instance_type = "t3.micro"

    user_data = <<EOF
        #!/bin/bash
        yum install -y httpd
        systemctl start httpd.service
EOF
}
